09. semester/MlaskalCompiler/public-ro/mlc/du4/tests/du4-test5-d.out
Error (line 3): 'INT' is not a type
There were some errors 1 and warnings 0
